[project]
name = "agentic-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.9",
    "langchain-core>=0.3.21",
    "langchain-openai>=0.2.11",
    "langgraph>=0.2.56",
    "langgraph-cli>=0.1.61",
    "langgraph-sdk>=0.1.43",
    "langsmith>=0.1.147",
    "notebook>=7.3.1",
    "tavily-python>=0.5.0",
]
